@@ -1,6 +1,8 @@
 Revision history for DBIx::Class::ResultSet::RecursiveUpdate
     - 'id' can't be used any more as an alias for the primary key column name
       as DBIx::Class doesn't treat it special
+    - Try to construct a new row object with all given update attributes and
+      use it to find the row in the database
 
 0.31 Wed Nov 6, 2013
     - Fixed failing test when DBIC_TRACE_PROFILE is set
